--- a/workspace/.recommenders/caches/identified-project-coordinates.json
+++ b/workspace/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"C:\\Users\\stani\\OneDrive\\Desktop\\academyJava\\workspace\\language","type":"PROJECT","hints":{"PROJECT_NAME":"language"}},"ABSENT"],[{"location":"C:\\Program Files\\Java\\jre1.8.0_301","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
